Issue 7010001: Fix issue #176 : Add wizard to change contract start date

--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -47,4 +47,7 @@
         </page>
     </notebook>
     <newline/>
+    <group id="button_change_start_date" states="{'invisible': True}">
+        <button name="button_change_start_date" string="Change start date"/>
+    </group>
 </form>
