--- a/modules/offered_insurance/view/option_description_list.xml
+++ b/modules/offered_insurance/view/option_description_list.xml
@@ -7,4 +7,7 @@
     <xpath expr="/tree" position="inside">
         <field name="insurer"/>
     </xpath>
+    <xpath expr="/tree/field[@name='name']" position="after">
+        <field name="insurance_kind"/>
+    </xpath>
 </data>
