--- a/modules/account_statement_contract_fr/view/statement_line_tree_editable_with_bank.xml
+++ b/modules/account_statement_contract_fr/view/statement_line_tree_editable_with_bank.xml
@@ -8,4 +8,5 @@
     <field name="bank"/>
     <field name="description"/>
     <field name="invoice"/>
+    <field name="statement" invisible="1"/>
 </tree>
