endorsement : fix issue #319 : Display button in endorsement list view

--- a/modules/endorsement/view/endorsement_list.xml
+++ b/modules/endorsement/view/endorsement_list.xml
@@ -4,4 +4,6 @@
   <field name="definition"/>
   <field name="state"/>
   <field name="application_date"/>
+  <button string="Draft" name="draft"/>
+  <button string="Apply" name="apply"/>
 </tree>
