--- a/modules/endorsement/view/endorsement_list.xml
+++ b/modules/endorsement/view/endorsement_list.xml
@@ -4,6 +4,7 @@
   <field name="definition"/>
   <field name="state"/>
   <field name="application_date"/>
+  <field name="applied_by"/>
   <button string="Draft" name="draft"/>
   <button string="Apply" name="apply"/>
 </tree>
