--- a/modules/account_aggregate/view/move_line_aggregated_list.xml
+++ b/modules/account_aggregate/view/move_line_aggregated_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Account Move Lines Aggregated">
+    <field name="snapshot"/>
     <field name="account"/>
     <field name="journal"/>
     <field name="post_date"/>
