Add description and aggregated move id field on aggregated line

--- a/modules/account_aggregate/view/move_line_aggregated_list.xml
+++ b/modules/account_aggregate/view/move_line_aggregated_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 <tree string="Account Move Lines Aggregated">
+    <field name="aggregated_move_id"/>
     <field name="snapshot"/>
     <field name="account"/>
     <field name="journal"/>
     <field name="post_date"/>
+    <field name="description"/>
     <field name="debit"/>
     <field name="credit"/>
 </tree>
