--- a/modules/account_aggregate/view/move_line_aggregated_form.xml
+++ b/modules/account_aggregate/view/move_line_aggregated_form.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
 <form string="Account Move Line Aggregated">
+    <label name="aggregated_move_id"/>
+    <field name="aggregated_move_id"/>
     <label name="snapshot"/>
     <field name="snapshot"/>
     <label name="account"/>
@@ -8,6 +10,8 @@
     <field name="journal"/>
     <label name="post_date"/>
     <field name="post_date"/>
+    <label name="description"/>
+    <field name="description"/>
     <newline/>
     <label name="debit"/>
     <field name="debit"/>
