--- a/modules/offered_life/view/premium_date_configuration_form.xml
+++ b/modules/offered_life/view/premium_date_configuration_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/field[@name='yearly_custom_date']" position="after">
-            <label name="yearly_each_birth_date"/>
-            <field name="yearly_each_birth_date"/>
+            <label name="yearly_each_covered_anniversary_date"/>
+            <field name="yearly_each_covered_anniversary_date"/>
     </xpath>
 </data>
