endorsement_insurance : Add new covered_element option endorsement part
review http://rietveld.coopengo.com/3140001/

--- a/modules/endorsement_insurance/view/endorsement_covered_element_form.xml
+++ b/modules/endorsement_insurance/view/endorsement_covered_element_form.xml
@@ -8,4 +8,6 @@
     <label name="covered_element"/>
     <field name="covered_element"/>
     <field name="values" colspan="4"/>
+    <newline/>
+    <field name="options" colspan="4" view_ids="endorsement_insurance.endorsement_covered_element_option_view_list,endorsement_insurance.endorsement_covered_element_option_view_form"/>
 </form>
