endorsement_loan : Add loan_share modification - creation
review http://rietveld.coopengo.com/3150001/

--- a/modules/endorsement_loan/view/endorsement_part_form.xml
+++ b/modules/endorsement_loan/view/endorsement_part_form.xml
@@ -4,5 +4,8 @@
         <page name="loan_fields">
             <field name="loan_fields"/>
         </page>
+        <page name="loan_share_fields">
+            <field name="loan_share_fields"/>
+        </page>
     </xpath>
 </data>
