--- a/modules/endorsement/view/select_endorsement_form.xml
+++ b/modules/endorsement/view/select_endorsement_form.xml
@@ -9,6 +9,6 @@
     <label name="product"/>
     <field name="product"/>
     <label name="endorsement_definition"/>
-    <field name="endorsement_definition"/>
+    <field name="endorsement_definition" view_ids="endorsement.endorsement_definition_light_view_list"/>
     <field name="endorsement"/>
 </form>
