--- a/modules/contract_insurance/view/covered_element_form.xml
+++ b/modules/contract_insurance/view/covered_element_form.xml
@@ -17,7 +17,6 @@
     <notebook>
         <page id="data" string="Extra Data">
             <field name="extra_data" colspan="2" no_command="1"/>
-            <field name="party_extra_data" colspan="2" no_command="1"/>
             <newline/>
         </page>
         <page id="options" string="Options">
@@ -37,4 +36,5 @@
     <field name="is_person" invisible="1"/>
     <newline/>
     <field name="product" invisible="1"/>
+    <field name="party_extra_data" invisible="1"/>
 </form>
