--- a/modules/contract_insurance/view/covered_element_simple_form.xml
+++ b/modules/contract_insurance/view/covered_element_simple_form.xml
@@ -15,10 +15,10 @@
     <field name="party"/>
     <newline/>
     <field name="extra_data" colspan="2" no_command="1"/>
-    <field name="party_extra_data" colspan="2" no_command="1"/>
     <newline/>
     <field name="item_kind"/>
     <newline/>
     <field name="is_person"/>
     <newline/>
+    <field name="party_extra_data" invisible="1"/>
 </form>
