--- a/modules/contract_insurance/view/party_form.xml
+++ b/modules/contract_insurance/view/party_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page/field[@name='addresses']" position="before">
-        <field name="extra_data" no_command="1"/>
+        <field name="extra_data"/>
     </xpath>
 </data>
