--- a/modules/account_statement_contract/view/statement_line_tree.xml
+++ b/modules/account_statement_contract/view/statement_line_tree.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/tree/field[@name='description']" position="before">
+    <xpath expr="/tree/field[@name='party']" position="replace"/>
+    <xpath expr="/tree/field[@name='number']" position="replace"/>
+    <xpath expr="/tree/field[@name='date']" position="before">
+        <field name="party"/>
         <field name="contract"/>
+    </xpath>
+    <xpath expr="/tree/field[@name='amount']" position="after">
+        <field name="number"/>
     </xpath>
 </data>
