--- a/modules/loan/view/display_insured_outstanding_loan_balance_line_list.xml
+++ b/modules/loan/view/display_insured_outstanding_loan_balance_line_list.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0"?>
 <tree string="Insurers">
-  <field name="name"/>
-  <field name="amount" expand="1">
+  <field name="name" expand="1"/>
+  <field name="amount">
       <suffix name="currency_symbol"/>
   </field>
-  <field name="insurers" tree_invisible="1"/>
 </tree>
-
