endorsement : add has_preview to summary view to make sure states are computed
review http://rietveld.coopengo.com/150001/

--- a/modules/endorsement/view/endorsement_summary_form.xml
+++ b/modules/endorsement/view/endorsement_summary_form.xml
@@ -8,4 +8,6 @@
     <field name="endorsement_definition" readonly="1"/>
     <newline/>
     <field name="endorsement_summary" colspan="4" readonly="1"/>
+    <newline/>
+    <field name="has_preview"/>
 </form>
