loan: Loan increments and payment automatic calculation during modification review : http://rietveld.coopengo.com/5100001/

--- a/modules/loan/view/loan_increment_tree.xml
+++ b/modules/loan/view/loan_increment_tree.xml
@@ -12,4 +12,5 @@
     <field name="end_date"/>
     <field name="deferal"/>
     <field name="begin_balance"/>
+    <field name="loan" tree_invisible="1"/>
 </tree>
