--- a/modules/loan/view/loan_form.xml
+++ b/modules/loan/view/loan_form.xml
@@ -1,69 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Loan">
-  <notebook>
-    <page id="main" string="Loan Parameters">
-      <label name="number"/>
-      <field name="number"/>
-      <label name="company"/>
-      <field name="company"/>
-      <label name="kind"/>
-      <field name="kind"/>
-      <label name="rate"/>
-      <group id="rate">
-          <field name="rate" factor="100" xexpand="0"/>
-          <label string="%" name="rate" xexpand="0" xalign="0"/>
-      </group>
-      <newline/>
-      <label name="amount"/>
-      <group id="amount">
-          <field name="amount" xexpand="0"/>
-          <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'leasing'}"/>
-      </group>
-      <label name="currency"/>
-      <field name="currency"/>
-      <newline/>
-      <label name="first_payment_amount"/>
-      <group id="first_payment_amount">
-          <field name="first_payment_amount" xexpand="0"/>
-          <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') != 'leasing'}"/>
-      </group>
-      <newline/>
-      <label name="number_of_payments"/>
-      <group id="frequency">
-          <field name="number_of_payments"/>
-          <field name="payment_frequency"/>
-      </group>
-      <label name="payment_amount"/>
-      <group id="payment_amount">
-          <field name="payment_amount" xexpand="0"/>
-          <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Or(Eval('kind') == 'graduated', ~~Eval('deferal'))}"/>
-      </group>
-      <label name="last_payment_amount"/>
-      <group id="last_payment_amount">
-          <field name="last_payment_amount" xexpand="0"/>
-          <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') != 'leasing'}"/>
-      </group>
-      <newline/>
-      <label name="funds_release_date"/>
-      <field name="funds_release_date"/>
-      <label name="first_payment_date"/>
-      <field name="first_payment_date"/>
-      <newline/>
-      <label name="deferal"/>
-      <field name="deferal"/>
-      <label name="deferal_duration"/>
-      <field name="deferal_duration"/>
-      <field name="parties" colspan="4" view_ids="party_cog.person_view_tree,party.party_view_form"/>
-    </page>
-    <page id="increments" string="Increments">
-      <field name="increments" colspan="4" mode="tree" pre_validate="1"/>
-    </page>
-    <page id="table" string="Amortization Table">
-      <button name="button_calculate_amortization_table" string="Calculate Amortization Table"/>
-      <field name="payments" colspan="4" mode="tree"/>
-    </page>
-    <page id="quota_share" string="Quota share">
-      <field name="loan_shares" colspan="4" mode="tree,form" view_ids="loan.loan_share_view_tree_editable,loan.loan_share_view_form"/>
-    </page>
-  </notebook>
+    <notebook>
+        <page id="main" string="Loan Parameters">
+            <label name="number"/>
+            <field name="number"/>
+            <label name="company"/>
+            <field name="company"/>
+            <label name="kind"/>
+            <field name="kind"/>
+            <label name="rate"/>
+            <group id="rate">
+                <field name="rate" factor="100" xexpand="0"/>
+                <label string="%" name="rate" xexpand="0" xalign="0"/>
+            </group>
+            <newline/>
+            <label name="amount"/>
+            <group id="amount">
+                <field name="amount" xexpand="0"/>
+                <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+            </group>
+            <label name="currency"/>
+            <field name="currency"/>
+            <newline/>
+            <newline/>
+            <label name="number_of_payments"/>
+            <group id="frequency">
+                <field name="number_of_payments"/>
+                <field name="payment_frequency"/>
+            </group>
+            <newline/>
+            <label name="funds_release_date"/>
+            <field name="funds_release_date"/>
+            <label name="first_payment_date"/>
+            <field name="first_payment_date"/>
+            <newline/>
+            <label name="deferal"/>
+            <field name="deferal"/>
+            <label name="deferal_duration"/>
+            <field name="deferal_duration"/>
+            <field name="increments" colspan="4" mode="tree"/>
+            <field name="parties" colspan="4" view_ids="party_cog.person_view_tree,party.party_view_form"/>
+        </page>
+        <page id="table" string="Amortization Table">
+            <field name="payments" colspan="4" mode="tree"/>
+        </page>
+        <page id="quota_share" string="Quota share">
+            <field name="loan_shares" colspan="4" mode="tree,form" view_ids="loan.loan_share_view_tree_editable,loan.loan_share_view_form"/>
+        </page>
+    </notebook>
 </form>
