party_cog:remove sequence attribute on relations editable list http://rietveld.coopengo.com/5340001

--- a/modules/party_cog/view/relation_editable_list.xml
+++ b/modules/party_cog/view/relation_editable_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Relations" editable="bottom" sequence="sequence">
+<tree string="Relations" editable="bottom">
     <field name="from_"/>
     <field name="type"/>
     <field name="to"/>
