endorsement : Add activation history to endorsements
Fix #488
review http://rietveld.coopengo.com/2140002/

--- a/modules/endorsement/view/endorsement_part_form.xml
+++ b/modules/endorsement/view/endorsement_part_form.xml
@@ -17,6 +17,9 @@
                 <page name="contract_fields">
                     <field name="contract_fields"/>
                 </page>
+                <page name="activation_history_fields">
+                    <field name="activation_history_fields"/>
+                </page>
                 <page name="option_fields">
                     <field name="option_fields"/>
                 </page>
