endorsement : Add M2M between methods and endorsement_part
Fix #494
review http://rietveld.coopengo.com/2140001/

--- a/modules/endorsement/view/endorsement_part_form.xml
+++ b/modules/endorsement/view/endorsement_part_form.xml
@@ -25,5 +25,8 @@
                 </page>
             </notebook>
         </page>
+        <page name="post_apply_actions">
+            <field name="post_apply_actions"/>
+        </page>
     </notebook>
 </form>
