--- a/modules/offered/view/option_description_rule_form.xml
+++ b/modules/offered/view/option_description_rule_form.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Rule">
     <label name="rule"/>
-    <field name="rule" xexpand="0"/>
+    <field name="rule"/>
+    <group id="void" colspan="2">
+    </group>
     <newline/>
     <label name="kind"/>
     <field name="kind" xexpand="0"/>
     <newline/>
-    <label name="rule_extra_data"/>
-    <field name="rule_extra_data" xexpand="0"/>
+    <field name="rule_extra_data" no_command="1" colspan="2"/>
 </form>
 
