Simplify mail sending review : http://rietveld.coopengo.com/3330002/

--- a/modules/offered_insurance/view/document_create_preview_form.xml
+++ b/modules/offered_insurance/view/document_create_preview_form.xml
@@ -3,7 +3,7 @@
   <label name="generated_report"/>
   <field name="generated_report" colspan="3" widget="url"/>
   <label name="email"/>
-  <field name="email" colspan="3" widget="selection"/>
+  <field name="email" colspan="3"/>
   <field name="party"/>
   <field name="filename"/>
   <field name="exact_name"/>
