endorsement_loan : Allow to modify the contract(s) end date after modifying the loan.
Fix #767
review http://rietveld.coopengo.com/9100003/

--- a/modules/endorsement_loan/view/select_contracts_form.xml
+++ b/modules/endorsement_loan/view/select_contracts_form.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <form string="Select Contracts to Update">
-    <field name="selected_contracts" widget="multiselection"/>
+    <field name="selected_contracts" colspan="4"/>
 </form>
