--- a/modules/loan/view/wizard_option_tree.xml
+++ b/modules/loan/view/wizard_option_tree.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/tree" position="replace_attributes">
+        <tree colors="If(~Eval('loan'), 'black', 'blue')"/>
+    </xpath>
     <xpath expr="/tree" position="inside">
         <field name="share" factor="100">
             <suffix string="%"/>
