endorsement_insurance : Add Extra Premium Endorsement data structure
Fix #779
review http://rietveld.coopengo.com/9180001/

--- a/modules/endorsement_insurance/view/endorsement_covered_element_option_form.xml
+++ b/modules/endorsement_insurance/view/endorsement_covered_element_option_form.xml
@@ -9,4 +9,5 @@
     <field name="option"/>
     <newline/>
     <field name="values" colspan="4"/>
+    <field name="extra_premiums" colspan="4"/>
 </form>
