--- a/modules/endorsement_loan/view/endorsement_loan_form.xml
+++ b/modules/endorsement_loan/view/endorsement_loan_form.xml
@@ -5,8 +5,5 @@
   <field name="values" colspan="4"/>
   <label name="state"/>
   <field name="state"/>
-  <group col="2" colspan="2" id="buttons">
-    <button name="draft" string="Draft"/>
-    <button name="apply" string="Apply"/>
-  </group>
+  <field name="increments" colspan="4"/>
 </form>
