--- a/modules/endorsement_loan/view/display_updated_payments_form.xml
+++ b/modules/endorsement_loan/view/display_updated_payments_form.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0"?>
-<form string="Updated Payments">
-    <label name="loan"/>
-    <field name="loan" colspan="3"/>
-    <notebook colspan="4">
-        <page name="new_payments">
-            <field name="new_payments" mode="tree" expand_toolbar="1"/>
-        </page>
-        <page name="current_payments">
-            <field name="current_payments" mode="tree" expand_toolbar="1"/>
-        </page>
-    </notebook>
+<form string="Updated Loan Payments">
+    <group id="one_loan" colspan="4" yexpand="1" yfill="1" states="{'invisible': Len(Eval('loans', [])) != Len([0])}">
+        <field name="loans" colspan="4" mode="form" expand_toolbar="0"/>
+    </group>
+    <group id="multiple_loan" colspan="4" yexpand="1" yfill="1" states="{'invisible': Len(Eval('loans', [])) == Len([0])}">
+        <field name="loans" colspan="4" mode="tree,form" expand_toolbar="0"/>
+    </group>
 </form>
