--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Extra Premium">
+    <label name="option"/>
+    <field name="option"/>
+    <newline/>
     <label name="motive"/>
     <field name="motive" widget="selection"/>
     <label name="calculation_kind"/>
