--- a/modules/offered_insurance/view/document_create_select_form.xml
+++ b/modules/offered_insurance/view/document_create_select_form.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Document Templates">
-    <field name="models" xexpand="1" xfill="1" yexpand="1" yfill="1" colspan="4"/>
+    <field name="models" xexpand="1" xfill="1" yexpand="1" yfill="1" colspan="4" widget="multiselection"/>
+    <field name="available_models"/>
     <newline/>
     <label name="good_address" xalign="0"/>
-    <field name="good_address" colspan="3" widget='selection'/>
+    <field name="good_address" colspan="3"/>
     <field name="party"/>
 </form>
