--- a/modules/benefit/view/option_description_form.xml
+++ b/modules/benefit/view/option_description_form.xml
@@ -2,7 +2,7 @@
 <data>
     <xpath expr="/form/notebook/page[@id='managers']" position="after">
         <page string="Benefits" id="benefits"
-            states="{'invisible': Or(Bool(Eval('is_package')), Eval('kind') != 'insurance')}">
+            states="{'invisible': Eval('kind') != 'insurance'}">
             <field name="benefits"/>
         </page>
     </xpath>
