--- a/modules/loan/view/options_displayer_form.xml
+++ b/modules/loan/view/options_displayer_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/field[@name='contract']" position="after">
+    <xpath expr="/form/field[@name='options']" position="before">
         <label name="default_share"/>
         <group id="default_share">
             <field name="default_share" factor="100" xexpand="0"/>
