endorsement_life : Remove experimental usage of product attribute in view

--- a/modules/endorsement_life/view/endorsement_part_form.xml
+++ b/modules/endorsement_life/view/endorsement_part_form.xml
@@ -2,7 +2,7 @@
 <data>
     <xpath expr="/form/notebook/page[@id='definition']/notebook/page[@name='contract_fields']" position="after">
         <page name="beneficiary_fields">
-            <field name="beneficiary_fields" product="field"/>
+            <field name="beneficiary_fields"/>
         </page>
     </xpath>
 </data>
