--- a/modules/loan/view/contract_form.xml
+++ b/modules/loan/view/contract_form.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='data']" position="inside">
-        <field name="loans" colspan="4" mode="tree"/>
+        <newline/>
+        <label name="show_ordered_loans"/>
+        <field name="show_ordered_loans"/>
+        <field name="loans" colspan="4" view_ids="loan.ordered_loan_view_list,loan.loan_view_form"/>
+        <field name="ordered_loans" colspan="4"/>
     </xpath>
     <xpath expr="//page[@id='cov_elements']/hpaned/child[@id='form']" position="inside">
         <field name="multi_mixed_view" group="multi_mixed_view" mode="form" relation="loan.share" relation_field="option" view_ids="loan.loan_share_view_form" expand_toolbar="0"/>
