--- a/modules/contract_insurance_invoice/view/invoice_line_form.xml
+++ b/modules/contract_insurance_invoice/view/invoice_line_form.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/form/notebook/page[@id='general']/field[@name='product']" position="after">
+        <label name="detail"/>
+        <field name="detail"/>
+    </xpath>
     <xpath expr="/form/notebook/page[@id='general']/label[@name='product']" position="replace"/>
     <xpath expr="/form/notebook/page[@id='general']/field[@name='product']" position="replace"/>
     <xpath expr="/form/notebook/page[@id='general']/label[@name='sequence']" position="replace"/>
