More cleaning on coverage kind review : http://rietveld.coopengo.com/6210001/

--- a/modules/benefit/view/option_description_form.xml
+++ b/modules/benefit/view/option_description_form.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='managers']" position="after">
-        <page string="Benefits" id="benefits"
-            states="{'invisible': Eval('kind') != 'insurance'}">
+        <page string="Benefits" id="benefits">
             <field name="benefits"/>
         </page>
     </xpath>
