Search and display loan parties on list view Fix #843 review : http://rietveld.coopengo.com/1420001/

--- a/modules/loan/view/loan_list.xml
+++ b/modules/loan/view/loan_list.xml
@@ -11,4 +11,5 @@
     </field>
     <field name="funds_release_date"/>
     <field name="first_payment_date"/>
+    <field name="parties_name"/>
 </tree>
