offered_insurance: Fix #1008 Add document desc on template https://redmine.coopengo.com/issues/1008 http://rietveld.coopengo.com/5520001

--- a/modules/offered_insurance/view/document_template_form.xml
+++ b/modules/offered_insurance/view/document_template_form.xml
@@ -10,6 +10,8 @@
     <field name="kind" colspan="3"/>
     <label name="internal_edm" xalign="0"/>
     <field name="internal_edm" />
+    <label name="document_desc"/>
+    <field name="document_desc"/>
     <notebook>
         <page string="Versions" id="versions">
             <field name="versions"/>
