--- a/modules/offered_insurance/view/document_template_list.xml
+++ b/modules/offered_insurance/view/document_template_list.xml
@@ -4,5 +4,6 @@
   <field name="code"/>
   <field name="on_model"/>
   <field name="kind"/>
+  <field name="document_desc"/>
   <field name="tags_name"/>
 </tree>
