contract_loan_invoice : Update Loan Average Rate calculation
Fix #298
review http://rietveld.coopengo.com/9300001

--- a/modules/contract_loan_invoice/view/loan_average_premium_tree.xml
+++ b/modules/contract_loan_invoice/view/loan_average_premium_tree.xml
@@ -4,4 +4,5 @@
     <field name="average_premium_rate">
         <suffix string="%"/>
     </field>
+    <field name="base_premium_amount"/>
 </tree>
