--- a/modules/document_request/view/document_tree.xml
+++ b/modules/document_request/view/document_tree.xml
@@ -7,4 +7,5 @@
     <field name="document_desc"/>
     <field name="for_object"/>
     <field name="attachment"/>
+    <field name="attachment_data"/>
 </tree>
