fix texts, xexpand does not exist on button for tests (even if it works)

--- a/modules/party_cog/view/party_form.xml
+++ b/modules/party_cog/view/party_form.xml
@@ -41,7 +41,9 @@
         </group>
     </xpath>
     <xpath expr="/form/group[@id='checkboxes']" position="after">
-        <button name="button_start_synthesis_menu" string="Synthesis" xexpand="0" xalign="1"/>
+        <group id="button" xexpand="0">
+            <button name="button_start_synthesis_menu" string="Synthesis"/>
+        </group>
     </xpath>
     <xpath expr="/form/field[@name='name']" position="replace"/>
     <xpath expr="/form/label[@name='name']" position="replace"/>
