--- a/modules/contract_loan_invoice/view/display_average_premium_values_form.xml
+++ b/modules/contract_loan_invoice/view/display_average_premium_values_form.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <form string="Contract Loans">
-    <field name="loans" mode="list" view_ids="contract_loan_invoice.loan_average_premium_view_tree"/>
+    <field name="loan_displayers" mode="list" view_ids="contract_loan_invoice.loan_average_premium_view_tree"/>
 </form>
