Added the void status and the substatus field to contract.
fix #629
issue http://rietveld.coopengo.com/4210001/

--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -3,7 +3,10 @@
     <label name="rec_name"/>
     <field name="rec_name"/>
     <label name="status"/>
-    <field name="status"/>
+    <group id="status">
+        <field name="status"/>
+        <field name="sub_status"/>
+    </group>
     <label name="start_date"/>
     <field name="start_date"/>
     <label name="end_date"/>
